# turtoise_future

./: .gitignore  CLAUDE.md  README.md  requirements.txt  visualize.ipynb
program/: backtest.py  constants.py  func_binary_classification.py  func_bot_agent.py  func_cointegration.py  func_entry_pairs.py  func_exit_pairs.py  func_hmm.py  func_prepare_data.py  func_private.py  func_public.py  func_select_feature.py  func_utils.py  main.py  stratmanager.py  supervised_trading.py  test.py
rust/: .gitignore  Cargo.toml
rust/src/: commodity.rs  config.rs  main.rs
rust/src/backtest/: engine.rs  mod.rs
rust/src/execution/: broker.rs  mod.rs
rust/src/strategies/: cointegration.rs  entry.rs  exit.rs  mod.rs
rust/src/web/: mod.rs
turtoise_future/: __init__.py
turtoise_future/config/: __init__.py  commodities.py  settings.py
turtoise_future/execution/: __init__.py  broker.py  order.py  position.py
turtoise_future/strategies/: __init__.py
turtoise_future/strategies/pair_trading/: __init__.py  backtest.py  cointegration.py  entry.py  exit.py
turtoise_future/strategies/supervised/: __init__.py  features.py  model.py  selection.py
turtoise_future/utils/: __init__.py  formatter.py  logger.py  validator.py
web/: app.py
