[package]
name = "turtoise_future"
version = "0.1.0"
edition = "2021"

[features]
default = []
web = ["axum", "tokio", "tower-http/fs", "tower-http/cors", "askama"]

[dependencies]
# CLI
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Data handling
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Statistics
statrs = "0.16"

# Lazy static
lazy_static = "1.4"

# Web server (via "web" feature)
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "cors"] }
askama = { version = "0.12", optional = true }

[profile.release]
opt-level = 3
lto = true
